exports[`<CodesplainAppBar /> snapshot tests user is logged in 1`] = `
<AppBar
  iconElementRight={
    <AppMenu
      onSignOut={[Function]} />
  }
  onTitleTouchTap={[Function]}
  showMenuIconButton={false}
  style={
    Object {
      "cursor": "pointer",
    }
  }
  title="Codesplain"
  zDepth={1} />
`;

exports[`<CodesplainAppBar /> snapshot tests user is not logged in 1`] = `
<AppBar
  iconElementRight={
    <LoginButton
      onClick={[Function]} />
  }
  onTitleTouchTap={[Function]}
  showMenuIconButton={false}
  style={
    Object {
      "cursor": "pointer",
    }
  }
  title="Codesplain"
  zDepth={1} />
`;
